GitLab group and project access token modules (#7964)
* Adding gitlab group and project acess token modules

* Documentation corrections and recreate option change

* Documentation corrections

* Correcting documentation for return objects

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -588,6 +588,10 @@ files:
     maintainers: SamyCoenen
   $modules/gitlab_user.py:
     maintainers: LennertMertens stgrace
+  $modules/gitlab_group_access_token.py:
+    maintainers: pixslx
+  $modules/gitlab_project_access_token.py:
+    maintainers: pixslx
   $modules/grove.py:
     maintainers: zimbatm
   $modules/gunicorn.py:
