--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -13,6 +13,28 @@ action_groups:
     - consul_session
     - consul_token
 plugin_routing:
+  callback:
+    actionable:
+      tombstone:
+        removal_version: 2.0.0
+        warning_text: Use the 'default' callback plugin with 'display_skipped_hosts
+          = no' and 'display_ok_hosts = no' options.
+    full_skip:
+      tombstone:
+        removal_version: 2.0.0
+        warning_text: Use the 'default' callback plugin with 'display_skipped_hosts
+          = no' option.
+    hipchat:
+      deprecation:
+        removal_version: 10.0.0
+        warning_text: The hipchat service has been discontinued and the self-hosted variant has been End of Life since 2020.
+    osx_say:
+      redirect: community.general.say
+    stderr:
+      tombstone:
+        removal_version: 2.0.0
+        warning_text: Use the 'default' callback plugin with 'display_failed_stderr
+          = yes' option.
   connection:
     docker:
       redirect: community.docker.docker
@@ -780,24 +802,6 @@ plugin_routing:
       redirect: dellemc.openmanage.dellemc_idrac
     remote_management.dellemc.ome:
       redirect: dellemc.openmanage.ome
-  callback:
-    actionable:
-      tombstone:
-        removal_version: 2.0.0
-        warning_text: Use the 'default' callback plugin with 'display_skipped_hosts
-          = no' and 'display_ok_hosts = no' options.
-    full_skip:
-      tombstone:
-        removal_version: 2.0.0
-        warning_text: Use the 'default' callback plugin with 'display_skipped_hosts
-          = no' option.
-    osx_say:
-      redirect: community.general.say
-    stderr:
-      tombstone:
-        removal_version: 2.0.0
-        warning_text: Use the 'default' callback plugin with 'display_failed_stderr
-          = yes' option.
   inventory:
     docker_machine:
       redirect: community.docker.docker_machine
