--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -294,6 +294,8 @@ files:
     labels: module_utils
   $module_utils/btrfs.py:
     maintainers: gnfzdz
+  $module_utils/cmd_runner.py:
+    maintainers: russoz
   $module_utils/deps.py:
     maintainers: russoz
   $module_utils/gconftool2.py:
@@ -338,6 +340,8 @@ files:
     maintainers: $team_oracle
   $module_utils/pipx.py:
     labels: pipx
+    maintainers: russoz
+  $module_utils/python_runner.py:
     maintainers: russoz
   $module_utils/puppet.py:
     labels: puppet
