add systemd run0 as a become method (#8306)
* add systemd run0 as a become method

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

* add fragment

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

* remove space after hyphen

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

* replace ansible with collection version

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

* update version_added and remove changelog fragment

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

* update formating

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

* add types

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

* slim super()

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

* imports must appear below docs

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

* add initial unit test

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

* update unit tests

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

---------

Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -33,6 +33,8 @@ files:
     maintainers: $team_ansible_core
   $becomes/pmrun.py:
     maintainers: $team_ansible_core
+  $becomes/run0.py:
+    maintainers: konstruktoid
   $becomes/sesu.py:
     maintainers: nekonyuu
   $becomes/sudosu.py:
