Initial commit for django modutils and django_command module (#8349)
* Initial commit for django modutils and django_command module

* Fixed sanity, param settings required

* add stdout, stderr and cmd to django module output

* add examples and return docs to djando_command module

* multiple minor adjustments

* fix typo

* Update plugins/modules/django_command.py

Co-authored-by: Felix Fontein <felix@fontein.de>

* Update plugins/modules/django_command.py

Co-authored-by: Felix Fontein <felix@fontein.de>

* Update plugins/modules/django_command.py

Co-authored-by: Felix Fontein <felix@fontein.de>

* move note to seealso

* add xfailing test

* Update plugins/doc_fragments/django.py

Co-authored-by: Felix Fontein <felix@fontein.de>

* Update plugins/doc_fragments/django.py

Co-authored-by: Felix Fontein <felix@fontein.de>

---------

Co-authored-by: Felix Fontein <felix@fontein.de>

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -119,6 +119,8 @@ files:
     maintainers: $team_ansible_core
   $doc_fragments/:
     labels: docs_fragments
+  $doc_fragments/django.py:
+    maintainers: russoz
   $doc_fragments/hpe3par.py:
     labels: hpe3par
     maintainers: farhan7500 gautamphegde
@@ -299,6 +301,8 @@ files:
   $module_utils/cmd_runner.py:
     maintainers: russoz
   $module_utils/deps.py:
+    maintainers: russoz
+  $module_utils/django.py:
     maintainers: russoz
   $module_utils/gconftool2.py:
     labels: gconftool2
@@ -499,6 +503,8 @@ files:
   $modules/django_manage.py:
     ignore: scottanderson42 tastychutney
     labels: django_manage
+    maintainers: russoz
+  $modules/django_command.py:
     maintainers: russoz
   $modules/dnf_versionlock.py:
     maintainers: moreda
