From now on automatically add period to new plugins in changelog, and use FQCNs (#8392)
From now on automatically add period to new plugins in changelog, and use FQCNs.

--- a/changelogs/config.yaml
+++ b/changelogs/config.yaml
@@ -35,3 +35,6 @@ sections:
 - - known_issues
   - Known Issues
 title: Community General
+trivial_section_name: trivial
+use_fqcn: true
+add_plugin_period: true
