django_createcachetable: new module (#8412)
* django_createcachetabe: new module

* add --noinput arg to testcase

* add module to BOTMETA

* rename module class name

* fix examples documentation

* remove unused config

* adjust version_added

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -506,6 +506,8 @@ files:
     ignore: scottanderson42 tastychutney
     labels: django_manage
     maintainers: russoz
+  $modules/django_createcachetable.py:
+    maintainers: russoz
   $modules/django_command.py:
     maintainers: russoz
   $modules/dnf_versionlock.py:
