--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -174,6 +174,8 @@ files:
   $filters/random_mac.py: {}
   $filters/remove_keys.py:
     maintainers: vbotka
+  $filters/replace_keys.py:
+    maintainers: vbotka
   $filters/time.py:
     maintainers: resmo
   $filters/to_days.yml:
